# dbeaver-proxy-to-ai-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dockerhub.yml  docker-compose.ghcr.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
deploy/systemd/: dbeaver-mistral-proxy.env.example  dbeaver-mistral-proxy.service
src/: cli.rs  client.rs  config.rs  main.rs  metrics.rs  models.rs  router.rs  sse.rs
src/dbeaver_mistral_proxy/: __main__.py  app.py  config.py  mistral_client.py  openai_responses.py
src/handlers/: mod.rs  models.rs  responses.rs
src/translation/: mod.rs  request.rs  response.rs
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: test_openai_responses.py
tests/integration/: models_endpoint.rs  responses_endpoint.rs  streaming.rs
tests/unit/: cli_tests.rs  config_tests.rs  request_translation.rs  response_translation.rs
