[package]
name = "dbeaver-proxy"
version = "0.1.0"
edition = "2024"
description = "A Rust proxy that translates DBeaver's OpenAI Responses API calls to any OpenAI-compatible backend"
license = "MIT"
repository = "https://github.com/gladson/dbeaver-proxy-to-ai-agent"
keywords = ["dbeaver", "proxy", "openai", "llm", "ai"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dev-dependencies]
tempfile = "3"

[dependencies]
# HTTP
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "decompression-gzip", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI / Config
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dialoguer = "0.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Async / Utility
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
