[project]
name = "dbeaver-proxy-to-mistral"
version = "0.3.1"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.semantic_release]
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
commit_message = "chore(release): {version}"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "deps", "security"]
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.changelog]
template_dir = "templates"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
